SONARGRADL-89 Add java 17 in CI to sonar-scanner-gradle